improvement: show company address for all alternative company properties obtained by gus-regon api - it ease personality selection

--- a/templates/default/customer/customercompanyselectiondialog.html
+++ b/templates/default/customer/customercompanyselectiondialog.html
@@ -4,5 +4,14 @@
         cursor: pointer;
     }
 
+    .company-selection-name {
+        font-size: 120%;
+        font-weight: bold;
+    }
+
+    .company-selection-address {
+        font-weight: normal;
+    }
+
 </style>
 <script src="js/lms-ui-customer-company-selection-dialog.js"></script>
