bugfix: fixed customer selection support in voip account billing list

--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -116,9 +116,9 @@
 					{customerlist
 						form="choosefilter"
 						customers=$voipownerlist.name
-						selected=$listdata.fvownerid
+						selected=$listdata.fownerid
 						version=2
-						selectname="fvownerid"
+						inputname="fownerid"
 						customOnChange="CustomerChanged($(this).val());"
 					}
 
