improvement: beautify copied plugins data from system information panel - fix

--- a/templates/default/welcome/welcome_sysinfo_about_lms.html
+++ b/templates/default/welcome/welcome_sysinfo_about_lms.html
@@ -76,8 +76,8 @@
                         <td class="text-right">
                             {trans('Documentation:')}
                         </td>
-                        <td class="bold">
-                            <a href="{$plugin.docurl}" rel="external">{trans('Documentation')}</a>
+                        <td>
+                            <a href="{$plugin.docurl}" rel="external">{$plugin.docurl}</a>
                         </td>
                     </tr>
                 {/if}
@@ -86,8 +86,8 @@
                         <td class="text-right">
                             {trans('Repository:')}
                         </td>
-                        <td class="bold">
-                            <a href="{$plugin.repourl}" rel="external">{trans('GIT Repository')}</a>
+                        <td>
+                            <a href="{$plugin.repourl}" rel="external">{$plugin.repourl}</a>
                         </td>
                     </tr>
                 {/if}
