improvement: more icons for gpon-dasan plugin

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -2023,3 +2023,30 @@
 .fa-beat {
   animation:fa-beat 5s ease infinite;
 }
+
+.lms-ui-icon-barcode {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-barcode;
+  }
+}
+
+.lms-ui-icon-factory-reset {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-sync-alt;
+  }
+}
+
+.lms-ui-icon-fiberoptic {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-lightbulb;
+  }
+}
