--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1150,12 +1150,13 @@
   }
 }
 
-.lms-ui-icon-reload {
+.lms-ui-icon-reload,
+.lms-ui-icon-factory-reset {
   .fa-icon;
   .fas;
   .lms-ui-icon;
   &:before {
-    content: @fa-var-sync;
+    content: @fa-var-sync-alt;
   }
 }
 
@@ -2030,15 +2031,6 @@
   .lms-ui-icon;
   &:before {
     content: @fa-var-barcode;
-  }
-}
-
-.lms-ui-icon-factory-reset {
-  .fa-icon;
-  .fas;
-  .lms-ui-icon;
-  &:before {
-    content: @fa-var-sync-alt;
   }
 }
 
