improvement/devel: easy usage

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -2034,7 +2034,9 @@
   }
 }
 
-.lms-ui-icon-fiberoptic {
+.lms-ui-icon-fiberoptic,
+.lms-ui-icon-fiber-optic,
+.lms-ui-icon-fibre-optic {
   .fa-icon;
   .fas;
   .lms-ui-icon;
