--- a/css/style.less
+++ b/css/style.less
@@ -684,7 +684,8 @@ input {
 			outline: none;
 		}
 	}
-	&.lms-ui-warning {
+	&.lms-ui-warning,
+	&.lms-ui-distinguished {
 		border: @warning-outline;
 		background-color: @warning-background;
 		box-shadow: @warning-box-shadow;
@@ -705,7 +706,8 @@ input {
 				box-shadow: @error-radiocheckbox-box-shadow-focus;
 			}
 		}
-		&.lms-ui-warning {
+		&.lms-ui-warning,
+		&.lms-ui-distinguished {
 			outline: none;
 			box-shadow: @warning-radiocheckbox-box-shadow;
 			&:focus {
@@ -768,7 +770,8 @@ textarea {
 		}
 	}
 
-	&.lms-ui-warning {
+	&.lms-ui-warning,
+	&.lms-ui-distinguished {
 		border: @warning-outline;
 		box-shadow: @warning-box-shadow;
 		background-color: @warning-background;
@@ -818,7 +821,8 @@ select {
 		}
 	}
 
-	&.lms-ui-warning {
+	&.lms-ui-warning,
+	&.lms-ui-distinguished {
 		border: @warning-outline;
 		box-shadow: @warning-box-shadow;
 		background-color: @warning-background;
@@ -2014,7 +2018,8 @@ table.dataTable {
 			outline: none;
 		}
 	}
-	&.lms-ui-warning {
+	&.lms-ui-warning,
+	&.lms-ui-distinguished {
 		border: @warning-outline !important;
 		background-color: @warning-background !important;
 		box-shadow: @warning-box-shadow !important;
