--- a/templates/default/netdev/netdevmodify.html
+++ b/templates/default/netdev/netdevmodify.html
@@ -111,6 +111,8 @@
 					<span class="lms-ui-button" id="set_gps">
 						{trans("Determine GPS coordinates automatically")}
 					</span>
+					&nbsp;
+					{reset_to_defaults target="#longitude,#latitude"}
 				{/box_row}
 
 				{box_row icon="location" icon_class="fa-fw" label="GPS longitude"}
