--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -423,6 +423,8 @@
 											<span class="lms-ui-button" id="set_gps">
 												{trans("Determine GPS coordinates automatically")}
 											</span>
+											&nbsp;
+											{reset_to_defaults target="#longitude,#latitude"}
 										</td>
 									</tr>
 
