enhancement: implemented smarty function '{reset_to_defaults}' which corresponds to button clearing value of all elements pointed by target parameter (different visual style for distinguished elements)

--- a/css/less/advanced-select.less
+++ b/css/less/advanced-select.less
@@ -106,8 +106,7 @@
       }
     }
   }
-  &.lms-ui-warning,
-  &.lms-ui-distinguished {
+  &.lms-ui-warning {
     .chosen-single {
       border: @warning-outline;
       background-color: @warning-background;
@@ -116,6 +115,18 @@
       &:focus {
         border: @warning-outline-focus;
         background-color: @warning-background;
+        box-shadow: @warning-box-shadow-focus;
+      }
+    }
+  }
+
+  &.lms-ui-distinguished {
+    .chosen-single {
+      border: @warning-outline;
+      box-shadow: @warning-box-shadow;
+
+      &:focus {
+        border: @warning-outline-focus;
         box-shadow: @warning-box-shadow-focus;
       }
     }
@@ -179,8 +190,7 @@
       }
     }
   }
-  &.lms-ui-warning,
-  &.lms-ui-distinguished {
+  &.lms-ui-warning {
     .chosen-choices {
       border: @warning-outline;
       background-color: @warning-background;
@@ -189,6 +199,18 @@
       &:focus {
         border: @warning-outline-focus;
         background-color: @warning-background;
+        box-shadow: @warning-box-shadow-focus;
+      }
+    }
+  }
+
+  &.lms-ui-distinguished {
+    .chosen-choices {
+      border: @warning-outline;
+      box-shadow: @warning-box-shadow;
+
+      &:focus {
+        border: @warning-outline-focus;
         box-shadow: @warning-box-shadow-focus;
       }
     }
