enhancement: implemented smarty function '{reset_to_defaults}' which corresponds to button clearing value of all elements pointed by target parameter (lms-ui-multiselect support)

--- a/css/less/multiselect.less
+++ b/css/less/multiselect.less
@@ -46,6 +46,21 @@
     }
   }
 
+  &.lms-ui-warning,
+  &.lms-ui-distinguished {
+    color: unset !important;
+
+    .lms-ui-multiselect-launcher {
+      border: @warning-outline;
+      box-shadow: @warning-box-shadow;
+      &:focus {
+        border: @warning-outline-focus;
+        box-shadow: @warning-box-shadow-focus;
+        outline: none;
+      }
+    }
+  }
+
   .lms-ui-multiselect-launcher {
     vertical-align: middle;
     background-color: @lucid;
