--- a/templates/default/rt/rtticketchildren.html
+++ b/templates/default/rt/rtticketchildren.html
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<TABLE class="lmsbox lms-ui-tab-container">
+<TABLE class="lmsbox lms-ui-tab-container lms-ui-sortable" id="rtticketchildren">
 	<COLGROUP>
 		<COL style="width: 99%;">
 		<COL style="width: 1%;">
@@ -7,7 +7,7 @@
 	<THEAD>
 		<TR class="hand lmsbox-titlebar nobr" data-lmsbox-content="childpanel-{$layout.module}">
 			<TD class="bold">
-				{icon name="helpdesk" label="Secondary tickets"}
+				{icon name="helpdesk" label="Secondary tickets" class="lms-ui-sortable-handle"}
 			</TD>
 			<TD>
 				{if $ticket.state != $smarty.const.RT_RESOLVED}
