--- a/templates/default/rt/rtticketparentinfo.html
+++ b/templates/default/rt/rtticketparentinfo.html
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<TABLE class="lmsbox lms-ui-tab-container">
+<TABLE class="lmsbox lms-ui-tab-container lms-ui-sortable" id="rtticketparentinfo">
 	<COLGROUP>
 		<COL style="width: 99%;">
 		<COL style="width: 1%;">
@@ -7,7 +7,7 @@
 	<THEAD>
 		<TR class="hand lmsbox-titlebar" data-lmsbox-content="parentpanel-{$layout.module}">
 			<TD class="bold">
-				{icon name="helpdesk" label="Primary ticket"}
+				{icon name="helpdesk" label="Primary ticket" class="lms-ui-sortable-handle"}
 			</TD>
 			<TD></TD>
 		</TR>
